--- a/Lab_2/Project.toml
+++ b/Lab_2/Project.toml
@@ -1,4 +1,17 @@
 name = "Lab_2"
 uuid = "65211736-3265-4963-88d5-824b6c0b0de3"
-authors = ["Grzegorz Grudzień <ggrudzien@student.agh.edu.pl>"]
 version = "0.1.0"
+authors = [
+  "Grzegorz Grudzień <ggrudzien@student.agh.edu.pl>",
+  "Oliwia Zawiła <oazawila@student.agh.edu.pl>"
+]
+
+[deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[compat]
+LinearAlgebra = "1.12.0"
+Random = "1.11.0"
+Test = "1.11.0"
