--- a/Lab_3/Project.toml
+++ b/Lab_3/Project.toml
@@ -8,6 +8,7 @@ Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 ImageCore = "a09fc81d-aa75-5fe9-8630-4744c3626534"
 ImageIO = "82e4d734-157c-48bb-816b-45c225c6df19"
+ImageMagick = "6218d12a-5da1-5696-b52f-db25d2ecc6d1"
 ImageShow = "4e3cecfd-b093-5904-9786-8bbb286a6a31"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
@@ -18,6 +19,7 @@ Colors = "0.13.1"
 FileIO = "1.17.1"
 ImageCore = "0.10.5"
 ImageIO = "0.6.9"
+ImageMagick = "1.4.2"
 ImageShow = "0.3.8"
 LinearAlgebra = "1.11.0"
 Random = "1.11.0"
